fixed about section alignment

--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ button:focus {
   position: relative;
   /* display: block; */
   /* top: 0; */
+  padding-top: 1.2%;
   height: 100vh;
   z-index: 2;
   width: 100%;
